update detail page

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -5,6 +5,7 @@
   <title>Details in Dummy YouTube</title>
 </head>
 <body>
+    
   <div id="header">
     <div class="logo">
       <div class="burger">
@@ -81,8 +82,8 @@
             <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">FullStack Dev</a></li>
             <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Web3.0 Dev</a></li>
             <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Ethereum</a></li>
-            <li id="more" class=""><img src="./imgs/more.svg" width="35"><a href="">Show more</a></li>
-            <li id="less" class="hide"><img src="./imgs/less.svg" width="35"><a href="">Show less</a></li>
+            <li id="more" class=""><img src="./imgs/arrow-down.svg" width="35"><a href="">Show more</a></li>
+            <li id="less" class="hide"><img src="./imgs/arrow-up.svg" width="35"><a href="">Show less</a></li>
         </ul>
         <div class="line"></div>
         <span>Subscriptions</span>
@@ -144,7 +145,7 @@
                         <div id="sub" class="open">Subscribe</div>
                         <div id="subed">Subscribed
                             <img src="./imgs/togzhi.svg">
-                            <img src="./imgs/more.svg">
+                            <img src="./imgs/arrow-down.svg">
                             <div id="subedPopup">
                                 <ul>
                                     <li><span>All</span><img src="./imgs/tongzhi-fill.svg"></li>
@@ -168,17 +169,18 @@
                             </div>
                         </div>
                         <div id="share">
+                            <div class="text">Share</div>
+                            <img src="./imgs/share.svg">
                             <span>Share</span>
                         </div>
-                        <div id="clip">
-                            <img>
-                            <span>Clip</span>
-                        </div>
                         <div id="save">
-                            <img>
-                            <span></span>
+                            <div class="text">Save</div>
+                            <img src="./imgs/save.svg">
+                            <span>Save</span>
                         </div>
-                        <div id="more"></div>
+                        <div id="more">
+                            <img src="./imgs/more.svg">
+                        </div>
                     </div>                      
                 </div>
                 <div id="summary">
@@ -200,5 +202,6 @@
     
 </div>
 <div id="mask"></div>
+<div id="sharePopup"></div>
 <script type=module src="./js/details.js"></script>
 </body>
