--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -83,8 +83,8 @@
                 <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">FullStack Dev</a></li>
                 <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Web3.0 Dev</a></li>
                 <li class="toHide hide"><img src="./imgs/bookmarker.svg" width="35"><a href="">Ethereum</a></li>
-                <li id="more" class=""><img src="./imgs/more.svg" width="35"><a href="">Show more</a></li>
-                <li id="less" class="hide"><img src="./imgs/less.svg" width="35"><a href="">Show less</a></li>
+                <li id="more" class=""><img src="./imgs/arrow-down.svg" width="35"><a href="">Show more</a></li>
+                <li id="less" class="hide"><img src="./imgs/arrow-up.svg" width="35"><a href="">Show less</a></li>
             </ul>
             <div class="line"></div>
             <span>Subscriptions</span>
