refactor code, make popup style as a component to be used in many places

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -146,14 +146,6 @@
                         <div id="subed">Subscribed
                             <img src="./imgs/togzhi.svg">
                             <img src="./imgs/arrow-down.svg">
-                            <div id="subedPopup">
-                                <ul>
-                                    <li><span>All</span><img src="./imgs/tongzhi-fill.svg"></li>
-                                    <li><span>Personalized</span><img src="./imgs/togzhi.svg"></li>
-                                    <li><span>None</span><img src="./imgs/tongzhi-no.svg"></li>
-                                    <li><span>Unsubscribe</span><img src="./imgs/unreg.svg"></li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
                     <div id="others">
@@ -202,6 +194,33 @@
     
 </div>
 <div id="mask"></div>
-<div id="sharePopup"></div>
+<div id="sharePopup">
+    <div id="title">
+        <div>Share</div>
+        <div id="close">
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+    <div id="shares">
+        <img src="./imgs/fb.png">
+        <img src="./imgs/whatsapp.png">
+    </div>
+</div>
+<div id="moreActionPopup" class="common_popup">
+    <ul>
+        <li><a><img src="./imgs/popups/report.svg">Report</a></li>
+        <li><a><img src="./imgs/popups/script.svg">Show transcript</a></li>
+    </ul>
+</div>
+<div id="subedPopup" class="common_popup">
+    <ul>
+        <li><a><img src="./imgs/tongzhi-fill.svg">All</a></li>
+        <li><a><img src="./imgs/togzhi.svg">Personalized</a></li>
+        <li><a><img src="./imgs/tongzhi-fill.svg">None</a></li>
+        <li><a><img src="./imgs/tongzhi-no.svg">Unsubscribe</a></li>
+    </ul>
+</div>
+
 <script type=module src="./js/details.js"></script>
 </body>
