--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -134,7 +134,7 @@
             <span>Pronunciation</span>
             <span>Sales</span>
         </div> 
-        <div id="popup">
+        <div id="popup" class="common_popup">
             <ul>
                 <li><a><img src="./imgs/popups/add-to-list.svg">Add to queue</a></li>
                 <li><a><img src="./imgs/popups/watch.svg">Saved to Watch later</a></li>
@@ -145,7 +145,7 @@
                 <li><a><img src="./imgs/popups/report.svg">Report</a></li>
             </ul>
         </div>
-        <div id="short_popup">
+        <div id="short_popup" class="common_popup">
             <ul>
                 <li><a><img src="./imgs/popups/report.svg">Report</a></li>
                 <li><a><img src="./imgs/popups/share.svg">Share</a></li>
