finished style of summary in detail page

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -176,7 +176,34 @@
                     </div>                      
                 </div>
                 <div id="summary">
-                    <span></span>
+                    <span>
+                        Hi, entrepreneur, 
+                    </p>
+
+JanessaTech(Juan Zhao in Chinese name) has over 10-year software engineering experience, who ever worked in ZTE, IBM, Huawei, Alstela(a global distributed remote-first company) as a backend software engineer.
+
+JanessaTech is a fast learner and an expert at building new production/features from concepts to delivery
+</p>
+
+In the last 5 years or so, she mainly focuses on micro-service tech stack. Besides that, she, with a great passion about blockchain, started an open-source project and made a comprehensive explanation about yellow paper which aims to help people worldwide to easily get through yellow paper. Besides writing codes, JanessaTech is comfortable with doing research, reading academic paper and productionizing academic paper via codes.
+
+For more information about JanessaTech, check the CV in pdf or browse the profile on LinkedIn.
+</p>
+
+For now, she works as a solo software engineer aiming to provide her services worldwide. Feel free to contact her. JanessaTech can help your achievement and success at all effort
+
+</p>
+JanessaTech's tech stack:</p>
+
+<strong>Language:</strong> Java, Go, Solidity, Groovy, bash, scala, (basic knowledge about Javascript, html, css)</br>
+<strong>Framework:</strong> Spring/Springboot/SpringCloud/micro-services, Gin, FX, Restful, GraphQL, Spring Security, JWT, OAuth 2.0,SSO, Swagger</br>
+<strong>Middleware:</strong> Truffle, Ganache,Rabbitmq, Nomad, Consul, Redis</br>
+<strong>CICD:</strong> AWS, gitlab pipeline, GitHub action, Docker</br>
+<strong>Database:</strong> Mysql,Flyway, JPA, Hibernate, gorm ,</br>
+<strong>Unit Test:</strong> Mockito, spock, Junit, Git</br>
+<strong>Process Management:</strong> Agile, Jira, github, git</br>
+<strong>Others:</strong> Linux, Data Structure, Design Pattern, API design, DB schema design, system design</br>
+                    </span>
                     <div id="showMore">more</div>
                     <div id="showLess">Show Less</div>
                 </div>
@@ -217,8 +244,8 @@
     <ul>
         <li><a><img src="./imgs/tongzhi-fill.svg">All</a></li>
         <li><a><img src="./imgs/togzhi.svg">Personalized</a></li>
-        <li><a><img src="./imgs/tongzhi-fill.svg">None</a></li>
-        <li><a><img src="./imgs/tongzhi-no.svg">Unsubscribe</a></li>
+        <li><a><img src="./imgs/tongzhi-no.svg">None</a></li>
+        <li><a><img src="./imgs/unreg.svg">Unsubscribe</a></li>
     </ul>
 </div>
 
