refactor codes and adjust the layout of detail page

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -226,8 +226,8 @@ JanessaTech's tech stack:</p>
                     </div>
                 </div>
             </div>
-            <div class="comment_content">
-                <a href="#"><img></a>
+            <div class="comment_content oneComment">
+                <a href="#"><img src="./imgs/commenters/p1.png"></a>
                 <div><span>@UncommonSenz</span><span>5 days ago</span></div>
                 <div>Anytime I come here, I leave inspired and motivated. The universe brought you into my life. And I’ve been learning since, hoping to find myself. May God bless you Conor.</div>
                 <div>
@@ -236,32 +236,6 @@ JanessaTech's tech stack:</p>
                     <div>12 replies</div>
                 </div>
             </div>
-            <!--
-            <div class="comment_byme oneComment">
-                <img src="./imgs/prof.png">
-                <input name="newComment" placeholder="Add a comments"/>
-                <div class="actionOnComment">
-                    <div class="moji"><img src="./imgs/emoji.svg"></div>
-                    <div>
-                        <button class="cancelComment">Cancel</button>
-                        <button class="submitComments disable">Comment</button>
-                    </div>
-                </div>
-                    
-                </div>
-            </div>
-            
-            <div class="comment_content">
-                <a href="#"><img></a>
-                <div><span>@UncommonSenz</span><span>5 days ago</span></div>
-                <div>Anytime I come here, I leave inspired and motivated. The universe brought you into my life. And I’ve been learning since, hoping to find myself. May God bless you Conor.</div>
-                <div>
-                    <div class="upvote"><span>2</span></div><div class="downvote"><span></span></div>
-                    <div class="reply"><span>Reply</span></div>
-                    <div>12 replies</div>
-                </div>
-            </div> 
-        -->
         </div>
       </div>
       <div id="reds"></div>
