--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -231,10 +231,11 @@ JanessaTech's tech stack:</p>
                 <div><span>@UncommonSenz</span><span>5 days ago</span></div>
                 <div>Anytime I come here, I leave inspired and motivated. The universe brought you into my life. And I’ve been learning since, hoping to find myself. May God bless you Conor.</div>
                 <div>
-                    <div class="upvote"><span>2</span></div><div class="downvote"><span></span></div>
-                    <div class="reply"><span>Reply</span></div>
-                    <div>12 replies</div>
+                    <div><div><img src="./imgs/support.svg"></div><div>378</div><span>Like</span></div>
+                    <div><div><img src="./imgs/support-no.svg"></div><div>0</div><span>Dislike</span></div>  
+                    <div><span>Reply</span></div>
                 </div>
+                <div>12 replies</div>
             </div>
         </div>
       </div>
