updated styles of comments

--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -235,7 +235,17 @@ JanessaTech's tech stack:</p>
                     <div><div><img src="./imgs/support-no.svg"></div><div>0</div><span>Dislike</span></div>  
                     <div><span>Reply</span></div>
                 </div>
-                <div>12 replies</div>
+                <div><img src="./imgs/triangle-down.svg">12 replies</div>
+            </div>
+            <div class="comment_content oneComment">
+                <a href="#"><img src="./imgs/commenters/p2.png"></a>
+                <div><span>@kamabk1</span><span>6 days ago</span></div>
+                <div>Beautiful lovey words.. Finding meaning is the key in every communication.. and not following the lessons from failure...another key..</div>
+                <div>
+                    <div><div><img src="./imgs/support.svg"></div><div>378</div><span>Like</span></div>
+                    <div><div><img src="./imgs/support-no.svg"></div><div>0</div><span>Dislike</span></div>  
+                    <div><span>Reply</span></div>
+                </div>
             </div>
         </div>
       </div>
