--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -215,36 +215,59 @@ JanessaTech's tech stack:</p>
                 <div>858 Comments</div> 
                 <div>Sort by <img src="./imgs/sort.svg"><span>Sort comments</span></div>
             </div>
-            <div class="comment_byme oneComment">
+            <div id="cmt0" class="comment_byme oneComment open">
                 <img src="./imgs/prof.png">
                 <input name="newComment" placeholder="Add a comments"/>
                 <div class="actionOnComment">
                     <div class="moji"><img src="./imgs/emoji.svg"></div>
                     <div>
                         <button class="cancelComment">Cancel</button>
-                        <button class="submitComment disable">Comment</button>
+                        <button class="submitComment disable ">Comment</button>
                     </div>
                 </div>
             </div>
-            <div class="comment_content oneComment">
+            <div id="cmt1" class="comment_content oneComment">
                 <a href="#"><img src="./imgs/commenters/p1.png"></a>
                 <div><span>@UncommonSenz</span><span>5 days ago</span></div>
                 <div>Anytime I come here, I leave inspired and motivated. The universe brought you into my life. And I’ve been learning since, hoping to find myself. May God bless you Conor.</div>
                 <div>
                     <div><div><img src="./imgs/support.svg"></div><div>378</div><span>Like</span></div>
                     <div><div><img src="./imgs/support-no.svg"></div><div>0</div><span>Dislike</span></div>  
-                    <div><span>Reply</span></div>
+                    <div id="cmt1_reply_btn"><span>Reply</span></div>
+                </div>
+                <div class="comment_byme oneComment replymode">
+                    <img src="./imgs/prof.png">
+                    <input name="newComment" placeholder="Add a comments"/>
+                    <div class="actionOnComment">
+                        <div class="moji"><img src="./imgs/emoji.svg"></div>
+                        <div>
+                            <button class="cancelComment">Cancel</button>
+                            <button class="submitComment disable ">Comment</button>
+                        </div>
+                    </div>
                 </div>
                 <div><img src="./imgs/triangle-down.svg">12 replies</div>
+
             </div>
-            <div class="comment_content oneComment">
+            <div id="cmt2" class="comment_content oneComment">
                 <a href="#"><img src="./imgs/commenters/p2.png"></a>
                 <div><span>@kamabk1</span><span>6 days ago</span></div>
                 <div>Beautiful lovey words.. Finding meaning is the key in every communication.. and not following the lessons from failure...another key..</div>
                 <div>
-                    <div><div><img src="./imgs/support.svg"></div><div>378</div><span>Like</span></div>
-                    <div><div><img src="./imgs/support-no.svg"></div><div>0</div><span>Dislike</span></div>  
-                    <div><span>Reply</span></div>
+                    <div><div><img src="./imgs/support.svg"></div><div>15</div><span>Like</span></div>
+                    <div><div><img src="./imgs/support-no.svg"></div><div>1</div><span>Dislike</span></div>  
+                    <div id="cmt2_reply_btn"><span>Reply</span></div>
+                </div>
+                <div class="comment_byme oneComment replymode">
+                    <img src="./imgs/prof.png">
+                    <input name="newComment" placeholder="Add a comments"/>
+                    <div class="actionOnComment">
+                        <div class="moji"><img src="./imgs/emoji.svg"></div>
+                        <div>
+                            <button class="cancelComment">Cancel</button>
+                            <button class="submitComment disable ">Comment</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
