--- a/css+div/dummy-youtube/details.html
+++ b/css+div/dummy-youtube/details.html
@@ -340,7 +340,143 @@ JanessaTech's tech stack:</p>
 
         </div> <!-- c1 comments --->
       </div>
-      <div id="reds"></div>
+      <div id="reds">
+        <div id="tabs">
+            <span class="cur">All</span>
+            <span>Study Skills</span>
+            <span>Thought</span>
+            <span>Computer Science</span>
+            <span>Pronunciation</span>
+            <span>Sales</span>
+        </div> 
+        <div class="primary">
+            <div class="video">
+                <div class="overview">
+                    <a href="./details.html">
+                        <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                            <source src="./videos/20221102-213005.mp4" type="video/mp4"></source>
+                        </video>
+                    </a>
+                </div>
+                <div class="intro"> 
+                    <span>Without a Goal, you can't Score | from Ireland, the Ring of Kerry</span>
+                    <span>Janessa Tech
+                        <span>Janessa Tech</span>
+                    </span>
+                    <span>1.5K views • 5 days ago</span>
+                    <img src="./imgs/prof.png">
+                    <div class="actions">
+                        <img src="./imgs/more_android_light.svg">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="overview">
+                    <a href="./details.html">
+                        <video controls muted controlsList="nodownload" onmouseover="this.play()" onmouseout="this.pause()">
+                            <source src="./videos/20230529-210928.mp4" type="video/mp4"></source>
+                        </video>
+                    </a>
+                </div>
+                <div class="intro"> 
+                    <span>Without a Goal, you can't Score | from Ireland, the Ring of Kerry</span>
+                    <span>Janessa Tech
+                        <span>Janessa Tech</span>
+                    </span>
+                    <span>1.5K views • 5 days ago</span>
+                    <img src="./imgs/prof.png">
+                    <div class="actions">
+                        <img src="./imgs/more_android_light.svg">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="overview">
+                    <a href="./details.html">
+                        <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                            <source src="./videos/20221102-213005.mp4" type="video/mp4"></source>
+                        </video>
+                    </a>
+                </div>
+                <div class="intro"> 
+                    <span>Without a Goal, you can't Score | from Ireland, the Ring of Kerry</span>
+                    <span>Janessa Tech
+                        <span>Janessa Tech</span>
+                    </span>
+                    <span>1.5K views • 5 days ago</span>
+                    <img src="./imgs/prof.png">
+                    <div class="actions">
+                        <img src="./imgs/more_android_light.svg">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="overview">
+                    <a href="./details.html">
+                        <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                            <source src="./videos/20230529-210928.mp4" type="video/mp4"></source>
+                        </video>
+                    </a>
+                </div>
+                <div class="intro"> 
+                    <span>Without a Goal, you can't Score | from Ireland, the Ring of Kerry</span>
+                    <span>Janessa Tech
+                        <span>Janessa Tech</span>
+                    </span>
+                    <span>1.5K views • 5 days ago</span>
+                    <img src="./imgs/prof.png">
+                    <div class="actions">
+                        <img src="./imgs/more_android_light.svg">
+                        <div></div>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="overview">
+                    <a href="./details.html">
+                        <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                            <source src="./videos/20221102-213005.mp4" type="video/mp4"></source>
+                        </video>
+                    </a>
+                </div>
+                <div class="intro"> 
+                    <span>Without a Goal, you can't Score | from Ireland, the Ring of Kerry</span>
+                    <span>Janessa Tech
+                        <span>Janessa Tech</span>
+                    </span>
+                    <span>1.5K views • 5 days ago</span>
+                    <img src="./imgs/prof.png">
+                    <div class="actions">
+                        <img src="./imgs/more_android_light.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+                <div class="overview">
+                    <a href="./details.html">
+                        <video controls muted onmouseover="this.play()" onmouseout="this.pause()">
+                            <source src="./videos/20230529-210928.mp4" type="video/mp4"></source>
+                        </video>
+                    </a>
+                </div>
+                <div class="intro"> 
+                    <span>Without a Goal, you can't Score | from Ireland, the Ring of Kerry</span>
+                    <span>Janessa Tech
+                        <span>Janessa Tech</span>
+                    </span>
+                    <span>1.5K views • 5 days ago</span>
+                    <img src="./imgs/prof.png">
+                    <div class="actions">
+                        <img src="./imgs/more_android_light.svg">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
       <div id="c2" class="comments">
         
             <div class="comment_header">
