--- a/css+div/dummy-youtube/index.html
+++ b/css+div/dummy-youtube/index.html
@@ -29,7 +29,12 @@
                         <li><img src="./imgs/his.svg" width="30"><span>tailwind css tutorial</span><span>Remove</span></li>
                         <li><img src="./imgs/his.svg" width="30"><span>defi dapp</span><span>Remove</span></li>
                         <li><img src="./imgs/his.svg" width="30"><span>React js tips and tricks</span><span>Remove</span></li>
-                        <li><img src="./imgs/his.svg" width="30"><span>ps for beginner</span><span>Remove</span></li>
+                        <li><img src="./imgs/his.svg" width="30"><span>web3.0 fullstack developer</span><span>Remove</span></li>
+                        <li><img src="./imgs/his.svg" width="30"><span>web3.0 fullstack developer</span><span>Remove</span></li>
+                        <li><img src="./imgs/his.svg" width="30"><span>web3.0 fullstack developer</span><span>Remove</span></li>
+                        <li><img src="./imgs/his.svg" width="30"><span>web3.0 fullstack developer</span><span>Remove</span></li>
+                        <li><img src="./imgs/his.svg" width="30"><span>web3.0 fullstack developer</span><span>Remove</span></li>
+                        <li><img src="./imgs/his.svg" width="30"><span>web3.0 fullstack developer</span><span>Remove</span></li>
                 </div>
             </div>
             <div class="len">
@@ -113,7 +118,15 @@
                 <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
                 <li><img src="./imgs/prof.png"><a href="">Janessa Tech</a><span>•</span></li>
             </ul>
-            <div>ddd</div>
+            <div style="font-size: small; font-weight: bold;"> 
+                About Press Copyright</br> 
+                Contact us Creators
+                Advertise Developers</br>
+                </p> 
+                Terms Privacy Policy & Safety  
+                How YouTube works</br>
+                Test new features</br> 
+            </div>
         </div>
     </div>
     <div id="min-menu"> 
