--- a/css+div/nijiafood/public/index.html
+++ b/css+div/nijiafood/public/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-amber-500">
+<body class="text-orange-600">
 
   <div>
     <div>
